--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -6,6 +6,7 @@ body{
 
 :root{
     --primary: #8e1617;
+
 }
 
 .background_img{
@@ -55,6 +56,14 @@ body{
     background-attachment: fixed;
 }
 
+.fondo4{
+    background-image: url(../media/Capa_231.png);
+    background-color: #7d9196;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+}
+
 .imagen_fondo{
     object-fit: cover;
     width: 100%;
@@ -66,7 +75,7 @@ body{
     transition: 0.8s;
     scale: 0.9;
     user-select: none;
-
+    max-height: 80%;
 }
 
 #logo:hover{
@@ -119,7 +128,7 @@ body{
     display: none !important;
 }
 
-@media (max-width: 768px) { 
+@media (max-width: 1000px) { 
     .parrafo_carta{
         font-size: large;
     }
@@ -130,6 +139,10 @@ body{
 
     .pantallaGrande{
         display: none !important;
+    }
+
+    .fichaPj{
+        flex-direction: column;
     }
  }
 
@@ -162,7 +175,7 @@ body{
 
 .navbar{
     position: fixed;
-    width: 100%;
+    width: 100vw;
 }
 
 .navbar a:hover{
@@ -214,5 +227,78 @@ body{
 
 .textoNPC{
     font-size: 2em;
+    max-width: 90vw;
 }
 
+.divPjs{
+    width: 95%;
+}
+
+.token{
+    max-width: 80vw;
+}
+
+
+
+.accordion{
+    background-color: transparent !important;
+    color: white !important;
+    border: none;
+}
+
+.accordion-item{
+    background-color: transparent !important;
+    color: white !important;
+    border: none;
+
+}
+
+.accordion-button{
+    background-color: transparent !important;
+    color: white !important;
+    border-bottom: solid white 3px !important;
+
+}
+
+.accordion-body{
+    color: white !important;
+    border: none;
+
+}
+
+.accordion-collapse{
+    background-color: transparent !important;
+    color: white !important;
+    border: none;
+
+}
+
+.texto{
+    background-color: rgba(0, 0, 0, 0.25)!important;
+    font-family: gilsascondensed;
+    font-size: 1.7em;
+    padding: 0%;
+}
+
+.letraSeccion{
+    font-size: 1.5em;
+}
+
+:focus {
+    outline: 0 !important;
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0) !important;
+  }
+
+  .accordion-button.draconis.collapsed{
+    border-bottom: solid rgba(255, 255, 255, 0.5) 3px !important;
+  }
+
+  .tokenPj{
+    width: 250px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .tituloPJ{
+    font-size: 1.25em;
+  }
